Require maven 2.2.1 (really should require 3.0+)

--- a/pom.xml
+++ b/pom.xml
@@ -91,7 +91,11 @@
 
         <maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
     </properties>
-    
+
+    <prerequisites>
+        <maven>2.2.1</maven>
+    </prerequisites>
+
     <dependencies>
         <dependency>
             <groupId>org.fusesource.jansi</groupId>
