--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <groupId>jline</groupId>
     <artifactId>jline</artifactId>
     <name>JLine</name>
-    <version>2.8-SNAPSHOT</version>
+    <version>2.8</version>
 
     <licenses>
         <license>
