--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,22 @@
         <url>http://github.com/jline/jline2</url>
     </scm>
 
+    <issueManagement>
+        <system>github</system>
+        <url>https://github.com/jline/jline2/issues</url>
+    </issueManagement>
+
+    <mailingLists>
+        <mailingList>
+            <name>jline-users</name>
+            <archive>https://groups.google.com/group/jline-users</archive>
+        </mailingList>
+        <mailingList>
+            <name>jline-dev</name>
+            <archive>https://groups.google.com/group/jline-dev</archive>
+        </mailingList>
+    </mailingLists>
+
     <distributionManagement>
         <site>
             <id>github-project-site</id>
@@ -455,8 +471,8 @@
                         <reports>
                             <!--<report>index</report>-->
                             <!--<report>summary</report>-->
-                            <!--<report>issue-tracking</report>-->
-                            <!--<report>mailing-list</report>-->
+                            <report>issue-tracking</report>
+                            <report>mailing-list</report>
                             <!--<report>cim</report>-->
                             <!--<report>scm</report>-->
                             <report>project-team</report>
