--- a/pom.xml
+++ b/pom.xml
@@ -242,6 +242,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>2.10.3</version>
+					<configuration>
+						<failOnError>false</failOnError>
+					</configuration>
                 </plugin>
 
                 <plugin>
