--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <jansi.version>1.12-SNAPSHOT</jansi.version>
+        <juniversalchardet.version>1.0.3</juniversalchardet.version>
     </properties>
 
     <prerequisites>
@@ -131,6 +132,13 @@
             <groupId>org.fusesource.jansi</groupId>
             <artifactId>jansi</artifactId>
             <version>${jansi.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.googlecode.juniversalchardet</groupId>
+            <artifactId>juniversalchardet</artifactId>
+            <version>${juniversalchardet.version}</version>
+            <optional>true</optional>
         </dependency>
 
         <dependency>
