--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,64 @@
 group 'ConsoleUI'
-version '1.0-SNAPSHOT'
+version '0.0.1-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'idea'
+apply plugin: 'maven'
+apply plugin: 'signing'
+apply plugin: 'distribution'
 
 repositories {
-    mavenCentral()
+  mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-    compile 'org.fusesource.jansi:jansi:1.11'
-    compile 'jline:jline:2.13'
+  testCompile group: 'junit', name: 'junit', version: '4.11'
+  compile 'org.fusesource.jansi:jansi:1.11'
+  compile 'jline:jline:2.13'
 }
 
+task javadocJar(type: Jar) {
+  classifier = 'javadoc'
+  from javadoc
+}
+
+task sourcesJar(type: Jar) {
+  classifier = 'sources'
+  from sourceSets.main.allSource
+}
 
 jar {
-    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+  from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 
-    manifest {
-        attributes 'Implementation-Title': 'ConsoleUI',
-                'Implementation-Version': version,
-                'Main-Class': 'de.codeshelf.consoleui.Basic'
+  manifest {
+    attributes 'Implementation-Title': 'ConsoleUI',
+            'Implementation-Version': version,
+            'Main-Class': 'de.codeshelf.consoleui.Basic'
 
+  }
+}
+
+artifacts {
+  archives javadocJar, sourcesJar
+}
+
+/*
+signing {
+  sign configurations.archives
+}
+
+distributions {
+  custom {}
+}
+*/
+
+group = "de.codeshelf.consoleui"
+archivesBaseName = "consoleui"
+
+uploadArchives {
+  repositories {
+    mavenDeployer {
+      beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
     }
+  }
 }
