--- a/build.gradle
+++ b/build.gradle
@@ -8,38 +8,38 @@ apply plugin: 'signing'
 apply plugin: 'distribution'
 
 repositories {
-  mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-  testCompile group: 'junit', name: 'junit', version: '4.11'
-  compile 'org.fusesource.jansi:jansi:1.11'
-  compile 'jline:jline:2.13'
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile 'org.fusesource.jansi:jansi:1.11'
+    compile 'jline:jline:2.13'
 }
 
 task javadocJar(type: Jar) {
-  classifier = 'javadoc'
-  from javadoc
+    classifier = 'javadoc'
+    from javadoc
 }
 
 task sourcesJar(type: Jar) {
-  classifier = 'sources'
-  from sourceSets.main.allSource
+    classifier = 'sources'
+    from sourceSets.main.allSource
 }
 
 jar {
-  from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
 
-  manifest {
-    attributes 'Implementation-Title': 'ConsoleUI',
-            'Implementation-Version': version,
-            'Main-Class': 'de.codeshelf.consoleui.Basic'
+    manifest {
+        attributes 'Implementation-Title': 'ConsoleUI',
+                'Implementation-Version': version,
+                'Main-Class': 'de.codeshelf.consoleui.Basic'
 
-  }
+    }
 }
 
 artifacts {
-  archives javadocJar, sourcesJar
+    archives javadocJar, sourcesJar
 }
 
 /*
@@ -52,13 +52,28 @@ distributions {
 }
 */
 
+distributions {
+    main {
+        //baseName = 'someName'
+        contents {
+            into("$name-$version") {
+                into('lib') {
+                    from libsDir
+                    include '*.jar' //copy the fat jar created by bootRepackage
+                }
+            }
+        }
+    }
+}
+
+
 group = "de.codeshelf.consoleui"
 archivesBaseName = "consoleui"
 
 uploadArchives {
-  repositories {
-    mavenDeployer {
-      beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+        }
     }
-  }
 }
