added gradle release plugin

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,15 @@
-version '0.0.3'
+buildscript {
+  repositories {
+    maven {
+      url 'https://plugins.gradle.org/m2/'
+    }
+  }
+  dependencies {
+    classpath 'net.researchgate:gradle-release:2.3.4'
+  }
+}
+
+apply plugin: 'net.researchgate.release'
 
 ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
 
