--- a/pom.xml
+++ b/pom.xml
@@ -33,14 +33,14 @@
     </licenses>
 
     <scm>
-        <connection>scm:git:git://github.com/jline/jline2.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com/jline/jline2.git</developerConnection>
-        <url>http://github.com/jline/jline2</url>
+        <connection>scm:git:git://github.com/jline/jline3.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/jline/jline3.git</developerConnection>
+        <url>http://github.com/jline/jline3</url>
     </scm>
 
     <issueManagement>
         <system>github</system>
-        <url>https://github.com/jline/jline2/issues</url>
+        <url>https://github.com/jline/jline3/issues</url>
     </issueManagement>
 
     <mailingLists>
@@ -56,7 +56,7 @@
     <distributionManagement>
         <site>
             <id>github-project-site</id>
-            <url>gitsite:git@github.com/jline/jline2.git</url>
+            <url>gitsite:git@github.com/jline/jline3.git</url>
         </site>
     </distributionManagement>
 
@@ -140,6 +140,20 @@
             <version>1.6.2</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm</artifactId>
+            <version>5.0.3</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -204,6 +218,7 @@
 
         <pluginManagement>
             <plugins>
+                <!--
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-site-plugin</artifactId>
@@ -217,6 +232,7 @@
                         </execution>
                     </executions>
                 </plugin>
+                -->
 
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -429,6 +445,18 @@
                     </mapping>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>net.sourceforge.cobertura</groupId>
+                        <artifactId>cobertura</artifactId>
+                        <version>2.1.1</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
 
@@ -440,7 +468,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-project-info-reports-plugin</artifactId>
-                <version>2.8</version>
+                <version>2.9</version>
                 <reportSets>
                     <reportSet>
                         <reports>
@@ -479,7 +507,7 @@
                         <version>1.0.6</version>
                     </docletArtifact>
                     <doclet>com.google.doclava.Doclava</doclet>
-                    <source>1.5</source>
+                    <source>1.8</source>
                     <bootclasspath>${sun.boot.class.path}</bootclasspath>
                     <additionalparam>
                         -quiet
@@ -503,7 +531,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.5</version>
+                <version>3.6</version>
             </plugin>
 
             <plugin>
@@ -526,7 +554,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>findbugs-maven-plugin</artifactId>
-                <version>3.0.1</version>
+                <version>3.0.3</version>
             </plugin>
 
             <plugin>
@@ -543,36 +571,6 @@
 
             <build>
                 <defaultGoal>clean install site:site site:stage</defaultGoal>
-            </build>
-        </profile>
-
-        <profile>
-            <id>retro</id>
-            <activation>
-                <property>
-                    <name>retro</name>
-                    <value>true</value>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>retrotranslator-maven-plugin</artifactId>
-                        <version>1.0-alpha-4</version>
-                        <executions>
-                            <execution>
-                                <goals>
-                                    <goal>translate-project</goal>
-                                </goals>
-                                <configuration>
-                                    <classifier>jdk14</classifier>
-                                    <attach>true</attach>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
             </build>
         </profile>
     </profiles>
