Switch to org.jline groupId, fixes #1

--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <version>9</version>
     </parent>
 
-    <groupId>jline</groupId>
+    <groupId>org.jline</groupId>
     <artifactId>jline</artifactId>
     <name>JLine</name>
     <version>3.0.0-SNAPSHOT</version>
