--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
+        <jna.version>4.2.2</jna.version>
         <jansi.version>1.14</jansi.version>
         <juniversalchardet.version>1.0.3</juniversalchardet.version>
     </properties>
@@ -109,7 +110,7 @@
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna</artifactId>
-            <version>4.2.2</version>
+            <version>${jna.version}</version>
             <optional>true</optional>
         </dependency>
 
