--- a/pom.xml
+++ b/pom.xml
@@ -302,6 +302,8 @@
                     <compilerArgs>
                         <arg>-Xlint:all,-options</arg>
                         <arg>-Werror</arg>
+                        <arg>-profile</arg>
+                        <arg>compact1</arg>
                     </compilerArgs>
                     <fork>true</fork>
                 </configuration>
