--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <groupId>org.jline</groupId>
     <artifactId>jline</artifactId>
     <name>JLine</name>
-    <version>3.0.4-SNAPSHOT</version>
+    <version>3.0.4</version>
 
     <licenses>
         <license>
