--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     <groupId>org.jline</groupId>
     <artifactId>jline</artifactId>
     <name>JLine</name>
-    <version>3.1.2-SNAPSHOT</version>
+    <version>3.1.2</version>
 
     <licenses>
         <license>
@@ -80,7 +80,7 @@
         <jansi.version>1.14</jansi.version>
         <juniversalchardet.version>1.0.3</juniversalchardet.version>
 
-        <surefire.argLine/>
+        <surefire.argLine />
     </properties>
 
     <prerequisites>
